package htl.SchoolAdministration.domain;

public enum Department {
    ARCHITECTURE_DESIGN,
    FASHION_DESIGN,
    GRAPHIC_DESIGN,
    INDUSTRIAL_DESIGN,
    MULTIMEDIA_DESIGN,
    INTERACTION_DESIGN,
    CYBERSECURITY,
    WEB_DEVELOPMENT,
    INFORMATICS,
    ARTIFICIAL_INTELLIGENCE
}
