package htl.SchoolAdministration.domain;

public enum Gender {
    MALE,
    FEMALE,
    DIVERS;
}
