package htl.SchoolAdministration.domain;

public enum Religion {
    CHRISTIANITY,
    ISLAM,
    JUDAISM,
    HINDUISM,
    BUDDHISM,
    SIKHISM,
    OTHER,
    NONE_SPECIFIED
}
