package htl.SchoolAdministration.domain;

public class TimeUnit {
}
